--- a/kitty.conf
+++ b/kitty.conf
@@ -3,6 +3,8 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
+enable_audio_bell no
+
 font_size 11.0
 
 scrollback_lines 2000
