--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,6 +6,11 @@ window_margin_width 5
 tab_bar_style powerline
 tab_powerline_style slanted
 
+font_family      HackNerdFontMono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+n launch --cwd=current
 map ctrl+page_up previous_tab
