--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,14 +6,28 @@ window_margin_width 5
 tab_bar_style powerline
 tab_powerline_style slanted
 
+# font_family      SpaceMonoNerdFontMono
+# font_family      MonofurNerdFontMono
 font_family      HackNerdFontMono
+# font_family      GoMonoNerdFontMono
+# font_family      IosevkaTermNerdFontMono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
+map ctrl+shift+n new_os_window_with_cwd
+
+# map ctrl+h neighboring_window left
+# map ctrl+shift+h move_window right
+# map ctrl+l neighboring_window right
+# map ctrl+shift+l move_window left
+
 map ctrl+shift+t new_tab_with_cwd
-map ctrl+shift+n launch --cwd=current
+
 map ctrl+page_up previous_tab
 map ctrl+page_down next_tab
 # tab_separator " | "
 # END_KITTY_THEME
+
+allow_remote_control socket-only
+listen_on unix:@mykitty
