--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,6 +14,7 @@ font_family      HackNerdFontMono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+font_size 13.0
 
 map ctrl+shift+n new_os_window_with_cwd
 
