--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,8 @@ tab_powerline_style slanted
 
 # font_family      SpaceMonoNerdFontMono
 # font_family      MonofurNerdFontMono
-font_family      HackNerdFontMono
+# font_family      HackNerdFontMono
+font_family      ProFontIIxNerdFontMono
 # font_family      GoMonoNerdFontMono
 # font_family      IosevkaTermNerdFontMono
 bold_font        auto
