--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,7 +23,7 @@
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango: Noto Sans Regular 10
+font pango: ProFont IIx Nerd Font Mono 12
 
 # set the mod key to the winkey:
 set $mod Mod4
@@ -428,7 +428,7 @@ exec --no-startup-id /usr/bin/dunst
 #exec_always --no-startup-id autotiling
 
 # Autostart apps as you like
-exec --no-startup-id sleep 2 && kitty
+exec --no-startup-id sleep 2 && wiki
 # exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
 #exec --no-startup-id sleep 3 && thunar
 
@@ -506,7 +506,8 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 # Start i3bar to display a workspace bar
 # (plus the system information i3status finds out, if available)
 bar {
-		font pango: Hack Mono Nerd 12
+		# font pango: Hack Mono Nerd 12
+		font pango: ProFont IIx Nerd Font Mono 12
     mode hide
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
 	    	position bottom
