Add local kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,31 +5,21 @@ hide_window_decorations yes
 window_margin_width 5
 tab_bar_style powerline
 tab_powerline_style slanted
+# tab_separator " | "
 
-# font_family      SpaceMonoNerdFontMono
-# font_family      MonofurNerdFontMono
-# font_family      HackNerdFontMono
-font_family      ProFontIIxNerdFontMono
-# font_family      GoMonoNerdFontMono
-# font_family      IosevkaTermNerdFontMono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 13.0
+# END_KITTY_THEME
 
 map ctrl+shift+n new_os_window_with_cwd
-
-# map ctrl+h neighboring_window left
-# map ctrl+shift+h move_window right
-# map ctrl+l neighboring_window right
-# map ctrl+shift+l move_window left
-
 map ctrl+shift+t new_tab_with_cwd
 
 map ctrl+page_up previous_tab
 map ctrl+page_down next_tab
-# tab_separator " | "
-# END_KITTY_THEME
 
 allow_remote_control socket-only
 listen_on unix:@mykitty
+
+# Include local settings
+include kitty-local.conf
