--- a/tmux.conf
+++ b/tmux.conf
@@ -20,3 +20,5 @@ bind -n M-j select-pane -D
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
+
+set -sg escape-time 0
