--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -107,10 +107,10 @@ interval=30
 # can be used also for GPU temperature or other temperature sensors lm-sensors detects.
 
 # showing name of connected network (enable for wifi use)
-#[net]
-#label=
-#command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
-#interval=30
+# [net]
+# label=
+# command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
+# interval=30
 
 [bandwidth]
 command=~/.config/i3/scripts/bandwidth2
@@ -125,7 +125,7 @@ label=
 interval=30
 
 [simple-2]
-full_text=: :
+full_text=:
 color=#717171
 
 [pavucontrol]
@@ -146,9 +146,9 @@ interval=1
 #command=~/.config/i3/scripts/keyboard-layout
 #interval=2
 
-[keybindings]
-full_text=
-command=~/.config/i3/scripts/keyhint
+# [keybindings]
+# full_text=
+# command=~/.config/i3/scripts/keyhint
 
 # power-profiles-daemon implementation:
 # needs package power-profiles-daemon installed and the service running see here:
@@ -165,15 +165,23 @@ color=#407437
 command=~/.config/i3/scripts/ppd-status
 interval=5
 
+[simple-2]
+full_text=:
+color=#717171
+
 [time]
 #label=
-command=date '+%Y_%m_%d || %H:%M:%S'
+command=date '+%Y_%m_%d : %H:%M:%S'
 interval=1
+
+[simple-2]
+full_text=:
+color=#717171
 
 [shutdown_menu]
 full_text=
 command=~/.config/i3/scripts/powermenu
 
 [simple-2]
-full_text=: :
+full_text=:
 color=#717171
