--- a/.config/i3/config
+++ b/.config/i3/config
@@ -194,7 +194,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # keybinding in fancy rofi (automated):
-bindsym F1 exec --no-startup-id ~/.config/i3/scripts/keyhint-2
+# bindsym F1 exec --no-startup-id ~/.config/i3/scripts/keyhint-2
 # alternative
 # keybinding list in editor:
 # bindsym $mod+F1 exec --no-startup-id xed ~/.config/i3/keybindings
@@ -223,6 +223,8 @@ bindsym $mod+Shift+h move left
 # bindsym $mod+Shift+j move down
 # bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
+
+bindsym $mod+p move workspace to output right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -288,8 +290,10 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 ## App shortcuts
 bindsym $mod+w exec --no-startup-id /usr/bin/firefox
+bindsym $mod+m exec --no-startup-id /usr/bin/thunderbird
 bindsym $mod+k exec --no-startup-id /usr/bin/keepassxc
 bindsym $mod+f exec --no-startup-id /usr/bin/thunar
+bindsym $mod+b exec --no-startup-id ~/scripts/brogue_load
 bindsym Print exec --no-startup-id scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/$(date +"%Y-%m-%d-%T")-screenshot.png"
 
 # Power Profiles menu switcher (rofi)
@@ -304,8 +308,8 @@ bindsym $mod+Shift+p exec --no-startup-id ~/.config/i3/scripts/power-profiles
 set $ws1 "1:♫"
 set $ws2 "2:"
 set $ws3 "3:"
-set $ws4 "4"
-set $ws5 "5"
+set $ws4 "4:"
+set $ws5 "5:󰍳"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
@@ -315,11 +319,16 @@ set $ws10 "10"
 # use workspaces on different displays:
 # where you have to replace VGA-0/HDMI-0 with the names for your displays
 # you can get from xrandr command
-#workspace $ws1 output VGA-0
-#workspace $ws2 output VGA-0
-#workspace $ws3 output HDMI-0
-#workspace $ws4 output HDMI-0
-#workspace $ws5 output HDMI-0
+workspace $ws1 output eDP
+workspace $ws2 output HDMI-A-0
+workspace $ws3 output HDMI-A-0
+workspace $ws4 output HDMI-A-0
+workspace $ws5 output HDMI-A-0
+workspace $ws6 output HDMI-A-0
+workspace $ws7 output eDP
+workspace $ws8 output eDP
+workspace $ws9 output eDP
+workspace $ws10 output eDP
 
 # bind program to workspace and focus to them on startup:
 # assign [class="WIKI_WINDOW"] $ws1
@@ -431,9 +440,9 @@ exec --no-startup-id /usr/bin/dunst
 
 # Autostart apps as you like
 # exec --no-startup-id sleep 2 && wiki
-exec --no-startup-id sleep 1 && i3-msg "workspace 3:" && firefox
-exec --no-startup-id sleep 2 && i3-msg "workspace 2:" && kitty
-exec --no-startup-id sleep 3 && i3-msg "workspace 1:♫" && wiki
+exec --no-startup-id sleep 1 && i3-msg "workspace $ws3" && firefox
+exec --no-startup-id sleep 2 && i3-msg "workspace $ws2" && kitty
+exec --no-startup-id sleep 3 && i3-msg "workspace $ws1" && wiki
 # exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
 #exec --no-startup-id sleep 3 && thunar
 
@@ -468,6 +477,8 @@ for_window [class="qt5ct" instance="qt5ct"] floating enable
 for_window [class="Blueberry.py" instance="blueberry.py"] floating enable
 for_window [class="Bluetooth-sendto" instance="bluetooth-sendto"] floating enable
 for_window [class="Pamac-manager"] floating enable
+for_window [class="Prism Launcher"] floating enable
+for_window [class="KeePassXC"] floating enable
 for_window [window_role="About"] floating enable
 
 # set border of floating window
