--- a/.config/i3/config
+++ b/.config/i3/config
@@ -107,16 +107,16 @@ bindcode $mod+Mod2+81 workspace $ws9
 bindcode $mod+Mod2+90 workspace $ws10
 
 # move focused container to workspace
-bindcode $mod+Shift+10    move container to workspace  $ws1
-bindcode $mod+Shift+11    move container to workspace  $ws2
-bindcode $mod+Shift+12    move container to workspace  $ws3
-bindcode $mod+Shift+13    move container to workspace  $ws4
-bindcode $mod+Shift+14    move container to workspace  $ws5
-bindcode $mod+Shift+15    move container to workspace  $ws6
-bindcode $mod+Shift+16    move container to workspace  $ws7
-bindcode $mod+Shift+17    move container to workspace  $ws8
-bindcode $mod+Shift+18    move container to workspace  $ws9
-bindcode $mod+Shift+19    move container to workspace  $ws10
+bindcode $mod+Shift+10    move container to workspace  $ws1; workspace $ws1
+bindcode $mod+Shift+11    move container to workspace  $ws2; workspace $ws2
+bindcode $mod+Shift+12    move container to workspace  $ws3; workspace $ws3
+bindcode $mod+Shift+13    move container to workspace  $ws4; workspace $ws4
+bindcode $mod+Shift+14    move container to workspace  $ws5; workspace $ws5
+bindcode $mod+Shift+15    move container to workspace  $ws6; workspace $ws6
+bindcode $mod+Shift+16    move container to workspace  $ws7; workspace $ws7
+bindcode $mod+Shift+17    move container to workspace  $ws8; workspace $ws8
+bindcode $mod+Shift+18    move container to workspace  $ws9; workspace $ws9
+bindcode $mod+Shift+19    move container to workspace  $ws10; workspace $ws10
 
 # move focused container to workspace with numpad keys
 bindcode $mod+Shift+Mod2+87 	move container to workspace  $ws1
@@ -178,7 +178,7 @@ bindsym $mod+Return exec --no-startup-id kitty
 bindsym $mod+q kill
 
 # exit-menu
-bindsym $mod+Shift+e exec --no-startup-id ~/.config/i3/scripts/powermenu
+bindsym $mod+ctrl+e exec --no-startup-id ~/.config/i3/scripts/powermenu
 
 # Lock the system
 # lock with a picture:
@@ -188,10 +188,10 @@ bindsym $mod+ctrl+s exec --no-startup-id ~/.config/i3/scripts/blur-lock && syste
 bindsym $mod+ctrl+l exec --no-startup-id ~/.config/i3/scripts/blur-lock
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $mod+ctrl+c reload
 
 # restart i3 inplace (preserves your layout/session, can be used to update i3)
-bindsym $mod+Shift+r restart
+bindsym $mod+ctrl+r restart
 
 # keybinding in fancy rofi (automated):
 # bindsym F1 exec --no-startup-id ~/.config/i3/scripts/keyhint-2
@@ -207,6 +207,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id ~/.config/i3/scripts/volume_bri
 bindsym XF86MonBrightnessDown exec --no-startup-id ~/.config/i3/scripts/volume_brightness.sh brightness_down
 
 # change focus
+focus_follows_mouse no
 bindsym $mod+h focus left
 # bindsym $mod+j focus down
 # bindsym $mod+k focus up
@@ -440,9 +441,9 @@ exec --no-startup-id /usr/bin/dunst
 
 # Autostart apps as you like
 # exec --no-startup-id sleep 2 && wiki
-exec --no-startup-id sleep 1 && i3-msg "workspace $ws3" && firefox
+exec --no-startup-id sleep 3 && i3-msg "workspace $ws3" && firefox
 exec --no-startup-id sleep 2 && i3-msg "workspace $ws2" && kitty
-exec --no-startup-id sleep 3 && i3-msg "workspace $ws1" && wiki
+exec --no-startup-id sleep 1 && i3-msg "workspace $ws1" && wiki
 # exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
 #exec --no-startup-id sleep 3 && thunar
 
@@ -453,7 +454,7 @@ exec --no-startup-id sleep 3 && i3-msg "workspace $ws1" && wiki
 # you need to have tray apps started manually one by one:
 
 # start blueberry app for managing bluetooth devices from tray:
-#exec --no-startup-id blueberry-tray
+exec --no-startup-id blueberry-tray
 
 # networkmanager-applet
 #exec --no-startup-id nm-applet
