--- a/.config/i3/config
+++ b/.config/i3/config
@@ -283,6 +283,7 @@ bindsym XF86AudioMicMute exec amixer sset Capture toggle
 # audio control
 bindsym XF86AudioPlay exec --no-startup-id playerctl play
 bindsym XF86AudioPause exec --no-startup-id playerctl pause
+bindsym XF86Launch1 exec --no-startup-id playerctl play-pause
 bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
