--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -71,34 +71,44 @@ markup=pango
 # full_text=: :
 # color=#717171
 
+[ping]
+command=ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
+interval=10
+
 # Disk usage
 #
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label= 
 instance=/
-command=~/.config/i3/scripts/disk
+command=~/.config/i3/scripts/disk | head -n1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
 interval=30
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label= 
-command=~/.config/i3/scripts/memory
+command=~/.config/i3/scripts/memory | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#FE9E33" " " on on
 interval=3
 
+[gpu-load]
+command=~/.config/i3/scripts/gpu-load | tail -n 1  | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
+interval=10
+# min_width=GPU 100% 100% 100% 100%
+#GPU_BRAND=NVIDIA // or AMD
+#T_WARN=70
+#T_CRIT=90
+
+
 [cpu_usage]
-label= 
-command=~/.config/i3/scripts/cpu_usage
+command=~/.config/i3/scripts/cpu_usage | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DE6F32" " " on on 
 #min_width=CPU: 100.00%
 interval=2
 
 [CPU-temperature]
 label=
-command=~/.config/i3/scripts/temperature
+command=~/.config/i3/scripts/temperature | head -n1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" "" off off
 interval=30
 #T_WARN=70
 #T_CRIT=90
@@ -112,30 +122,28 @@ interval=30
 # command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
 # interval=30
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+# [bandwidth]
+# command=~/.config/i3/scripts/bandwidth2
+# interval=persist
+
 
 # Battery indicator
 [battery]
-command=~/.config/i3/scripts/battery2
-# for alternative battery script  change to battery1
-# change this to battery-pinebook-pro if you are running on pinebook-pro
-label=
+command=~/.config/i3/scripts/battery2 | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#A63E33" "" on on
 interval=30
 
-[simple-2]
-full_text=:
-color=#717171
+#set power-profile
+# [ppd_menu]
+# full_text=
+# command=~/.config/i3/scripts/power-profiles 
+# color=#407437
 
-[pavucontrol]
-full_text=
-command=pavucontrol
+#Show the current power-profile
+[ppd-status]
+command=~/.config/i3/scripts/ppd-status | head -n1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" "" off off
 
-[volume-pulseaudio]
-command=~/.config/i3/scripts/volume
-instance=Master
-interval=1
+interval=5
+
 
 # display keyboard layout name
 # for keyboard layouts switcher
@@ -154,34 +162,44 @@ interval=1
 # needs package power-profiles-daemon installed and the service running see here:
 # https://wiki.archlinux.org/title/CPU_frequency_scaling#power-profiles-daemon
 
-#set power-profile
-[ppd_menu]
-full_text=
-command=~/.config/i3/scripts/power-profiles
-color=#407437
+# [pacman-updates]
+# # command=~/.config/i3/scripts/arch-update
+# command=echo "hello"
+# markup=pango
+# interval=1
+# QUIET=true
+# WATCH=^linux.* ^pacman.*
+# BASE_COLOR=#5fff5f
+# UPDATE_COLOR=#FFFF85
+# AUR=true
+# LABEL= 
 
-#Show the current power-profile
-[ppd-status]
-command=~/.config/i3/scripts/ppd-status
-interval=5
+# [time]
+# #label=
+# command=date '+%Y_%m_%d : %H:%M:%S'
+# interval=1
 
-[simple-2]
-full_text=:
-color=#717171
+# [date]
+# command=date +"%Y_%m_%d" | ~/.config/i3/scripts/modulify.sh "#383A42" "#ffffff" "" on off
+# markup=pango
+# background=#ffffff
+# color=#FAFAFA
+# interval=60
 
 [time]
-#label=
-command=date '+%Y_%m_%d : %H:%M:%S'
+command=date +"%Y_%m_%d @ %H:%M:%S" | ~/.config/i3/scripts/modulify.sh "#383A42" "#6A202D" "" on on
 interval=1
 
-[simple-2]
-full_text=:
-color=#717171
+[volume-pulseaudio]
+command=~/.config/i3/scripts/volume | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
+instance=Master
+interval=1
 
-[shutdown_menu]
-full_text=
-command=~/.config/i3/scripts/powermenu
+# [shutdown_menu]
+# full_text=<span foreground='#FAFAFA' size='x-large'> </span>
+# markup=pango
+# command=~/.config/i3/scripts/powermenu
 
-[simple-2]
-full_text=:
-color=#717171
+# [simple-2]
+# full_text=" : "
+# color=#717171
