Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,15 +2,10 @@
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix 
- 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+unbind r
+bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
  
 # switch panes using Alt-arrow without prefix
 bind -n M-h select-pane -L
@@ -22,3 +17,6 @@ bind -n M-j select-pane -D
 set -g mouse on
 
 set -sg escape-time 0
+
+set -g status-style bg=black,fg=green
+set -g default-terminal "screen-256color"
