--- a/.config/i3/config
+++ b/.config/i3/config
@@ -225,7 +225,7 @@ bindsym $mod+Shift+h move left
 # bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-bindsym $mod+p move workspace to output right
+bindsym $mod+j move workspace to output right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -294,7 +294,7 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 bindsym $mod+w exec --no-startup-id /usr/bin/firefox
 bindsym $mod+m exec --no-startup-id /usr/bin/thunderbird
 bindsym $mod+k exec --no-startup-id /usr/bin/keepassxc
-bindsym $mod+f exec --no-startup-id /usr/bin/thunar
+bindsym $mod+f exec --no-startup-id ~/scripts/run_in_new_terminal /usr/bin/yazi
 bindsym $mod+b exec --no-startup-id ~/scripts/brogue_load
 bindsym $mod+v exec --no-startup-id ~/scripts/toggle_vpn
 bindsym Print exec --no-startup-id scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/$(date +"%Y-%m-%d-%T")-screenshot.png"
@@ -517,7 +517,7 @@ set $grey		#b0b5bd
 set $mediumgrey		#8b8b8b
 set $yellowbrown	#e1b700
 set $clear #00000000
-set $bar_background #383A42
+set $bar_background #DC672C
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
@@ -534,7 +534,7 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 # (plus the system information i3status finds out, if available)
 bar {
 		# font pango: Hack Mono Nerd 12
-		font pango: ProFont IIx Nerd Font Mono 9
+		font pango: ProFont IIx Nerd Font Mono 12
     mode hide
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
     position bottom
@@ -550,15 +550,15 @@ bar {
     strip_workspace_numbers yes
 ##strip_workspace_name no
 
-    # separator_symbol   ":|:"
+    # separator_symbol   "/"
     colors {
-        separator          $purple
+        separator          $white
         background         $bar_background
         statusline         $white
 #                          		border 		        bg		txt		indicator
-        focused_workspace	  $bar_background     $bar_background		#FE9E33	$purple
+        focused_workspace	  $bar_background     $bar_background		$white	$purple
         active_workspace	  $bar_background     $bar_background	$grey	$purple
-        inactive_workspace	$bar_background   	 $bar_background	  $mediumgrey		$purple
+        inactive_workspace	$bar_background   	 $bar_background	  $grey		$purple
         urgent_workspace	  $bar_background	   $bar_background	  $urgentred		$purple
     }
 }
