--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -72,7 +72,7 @@ markup=pango
 # color=#717171
 
 [ping]
-command=ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
+command=ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1 | ~/.config/i3/scripts/modulify.sh "#DC672C" "#DC672C" " " off off
 interval=10
 
 # Disk usage
@@ -82,18 +82,18 @@ interval=10
 # (defaults to 10 for 10%).
 [disk]
 instance=/
-command=~/.config/i3/scripts/disk | head -n1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
+command=~/.config/i3/scripts/disk | head -n1 | ~/.config/i3/scripts/modulify.sh "#DC672C" "#DC672C" " " off off
 interval=30
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-command=~/.config/i3/scripts/memory | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#FE9E33" " " on on
+command=~/.config/i3/scripts/memory | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off
 interval=3
 
 [gpu-load]
-command=~/.config/i3/scripts/gpu-load | tail -n 1  | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
+command=~/.config/i3/scripts/gpu-load | tail -n 1  | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off
 interval=10
 # min_width=GPU 100% 100% 100% 100%
 #GPU_BRAND=NVIDIA // or AMD
@@ -102,13 +102,13 @@ interval=10
 
 
 [cpu_usage]
-command=~/.config/i3/scripts/cpu_usage | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DE6F32" " " on on 
+command=~/.config/i3/scripts/cpu_usage | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off 
 #min_width=CPU: 100.00%
 interval=2
 
 [CPU-temperature]
 label=
-command=~/.config/i3/scripts/temperature | head -n1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" "" off off
+command=~/.config/i3/scripts/temperature | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" "" off off
 interval=30
 #T_WARN=70
 #T_CRIT=90
@@ -129,7 +129,7 @@ interval=30
 
 # Battery indicator
 [battery]
-command=~/.config/i3/scripts/battery2 | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#A63E33" "" on on
+command=~/.config/i3/scripts/battery2 | head -n1 | ~/.config/i3/scripts/modulify.sh "#DC672C" "#383A42" "" on on 
 interval=30
 
 #set power-profile
@@ -140,8 +140,7 @@ interval=30
 
 #Show the current power-profile
 [ppd-status]
-command=~/.config/i3/scripts/ppd-status | head -n1 | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" "" off off
-
+command=~/.config/i3/scripts/ppd-status | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" "" off off
 interval=5
 
 
@@ -187,11 +186,11 @@ interval=5
 # interval=60
 
 [time]
-command=date +"%Y_%m_%d @ %H:%M:%S" | ~/.config/i3/scripts/modulify.sh "#383A42" "#6A202D" "" on on
+command=date +"%Y_%m_%d @ %H:%M:%S" | ~/.config/i3/scripts/modulify.sh "#DC672C" "#383A42" "" on on 
 interval=1
 
 [volume-pulseaudio]
-command=~/.config/i3/scripts/volume | ~/.config/i3/scripts/modulify.sh "#ffffff" "#383A42" " " off off
+command=~/.config/i3/scripts/volume | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off
 instance=Master
 interval=1
 
