--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -37,7 +37,7 @@
 # Global properties
 #
 # The top properties below are applied to every block, but can be overridden.
-separator=false
+separator=true
 markup=pango
 
 #[Weather]
@@ -72,7 +72,7 @@ markup=pango
 # color=#717171
 
 [ping]
-command=ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1 | ~/.config/i3/scripts/modulify.sh "#DC672C" "#DC672C" " " off off
+command=echo  $(ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1)
 interval=10
 
 # Disk usage
@@ -82,18 +82,18 @@ interval=10
 # (defaults to 10 for 10%).
 [disk]
 instance=/
-command=~/.config/i3/scripts/disk | head -n1 | ~/.config/i3/scripts/modulify.sh "#DC672C" "#DC672C" " " off off
+command=echo  $(~/.config/i3/scripts/disk | head -n1)
 interval=30
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-command=~/.config/i3/scripts/memory | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off
+command=echo  $(~/.config/i3/scripts/memory | head -n1)
 interval=3
 
 [gpu-load]
-command=~/.config/i3/scripts/gpu-load | tail -n 1  | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off
+command=echo  $(~/.config/i3/scripts/gpu-load | tail -n 1)
 interval=10
 # min_width=GPU 100% 100% 100% 100%
 #GPU_BRAND=NVIDIA // or AMD
@@ -102,13 +102,13 @@ interval=10
 
 
 [cpu_usage]
-command=~/.config/i3/scripts/cpu_usage | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off 
+command=echo  $(~/.config/i3/scripts/cpu_usage | head -n1)
 #min_width=CPU: 100.00%
 interval=2
 
 [CPU-temperature]
 label=
-command=~/.config/i3/scripts/temperature | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" "" off off
+command=~/.config/i3/scripts/temperature
 interval=30
 #T_WARN=70
 #T_CRIT=90
@@ -129,7 +129,7 @@ interval=30
 
 # Battery indicator
 [battery]
-command=~/.config/i3/scripts/battery2 | head -n1 | ~/.config/i3/scripts/modulify.sh "#DC672C" "#383A42" "" on on 
+command=~/.config/i3/scripts/battery2
 interval=30
 
 #set power-profile
@@ -140,7 +140,7 @@ interval=30
 
 #Show the current power-profile
 [ppd-status]
-command=~/.config/i3/scripts/ppd-status | head -n1 | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" "" off off
+command=~/.config/i3/scripts/ppd-status
 interval=5
 
 
@@ -186,11 +186,11 @@ interval=5
 # interval=60
 
 [time]
-command=date +"%Y_%m_%d @ %H:%M:%S" | ~/.config/i3/scripts/modulify.sh "#DC672C" "#383A42" "" on on 
+command=date +"%Y_%m_%d @ %H:%M:%S"
 interval=1
 
 [volume-pulseaudio]
-command=~/.config/i3/scripts/volume | ~/.config/i3/scripts/modulify.sh "#383A42" "#DC672C" " " off off
+command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
 
@@ -200,5 +200,5 @@ interval=1
 # command=~/.config/i3/scripts/powermenu
 
 # [simple-2]
-# full_text=" : "
-# color=#717171
+# full_text="|"
+# color=#fafafa
