--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,6 +5,7 @@ hide_window_decorations yes
 window_margin_width 5
 tab_bar_style powerline
 tab_powerline_style slanted
+background_opacity 0.95
 # tab_separator " | "
 
 bold_font        auto
