Disable audio bell in kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,6 +7,7 @@ tab_bar_style powerline
 tab_powerline_style slanted
 background_opacity 0.95
 # tab_separator " | "
+enable_audio_bell no
 
 bold_font        auto
 italic_font      auto
