--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -70,6 +70,10 @@ markup=pango
 # [simple-2]
 # full_text=: :
 # color=#717171
+#
+[vpn]
+command=echo $(~/.config/i3/scripts/vpn)
+interval=10
 
 [ping]
 command=echo  $(ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1)
@@ -186,7 +190,7 @@ interval=5
 # interval=60
 
 [time]
-command=date +"%Y_%m_%d @ %H:%M:%S"
+command=date +"%a %Y_%m_%d @ %H:%M:%S"
 interval=1
 
 [volume-pulseaudio]
