--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,5 +23,7 @@ map ctrl+page_down next_tab
 allow_remote_control socket-only
 listen_on unix:@mykitty
 
+select_by_word_characters @-./_~?&=%+#:
+
 # Include local settings
 include kitty-local.conf
