--- a/.config/i3/config
+++ b/.config/i3/config
@@ -305,7 +305,7 @@ bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Redirect sound to headphones
-bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
+# bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
 
 ## App shortcuts
 bindsym $mod+ctrl+w exec --no-startup-id ~/scripts/cycle_wallpaper
@@ -471,12 +471,9 @@ exec --no-startup-id /usr/bin/dunst
 #exec_always --no-startup-id autotiling
 
 # Autostart apps as you like
-# exec --no-startup-id sleep 2 && wiki
 exec --no-startup-id sleep 1 && i3-msg "workspace $ws1" && wiki
 exec --no-startup-id sleep 3 && i3-msg "workspace $ws2" && kitty
 exec --no-startup-id sleep 5 && i3-msg "workspace $ws3" && firefox
-# exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
-#exec --no-startup-id sleep 3 && thunar
 
 ###############
 # system tray #
@@ -558,7 +555,7 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 bar {
 		# font pango: Hack Mono Nerd 12
 		font pango: ProFont IIx Nerd Font Mono 12
-    mode hide
+    # mode hide
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
     position bottom
     # i3bar_command i3bar --transparency
