--- a/.config/systemd/user/check_battery.service
+++ b/.config/systemd/user/check_battery.service
@@ -4,3 +4,6 @@ Description=Check battery & show notification
 [Service]
 Type=oneshot
 ExecStart=/home/jamie/scripts/check_battery.sh
+
+[Install]
+WantedBy=graphical.target
