Update gpu stats

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -97,7 +97,7 @@ command=echo  $(~/.config/i3/scripts/memory | head -n1)
 interval=3
 
 [gpu-load]
-command=echo  $(~/.config/i3/scripts/gpu-load | tail -n 1)
+command=echo  $(~/.config/i3/scripts/gpu_load_nvidia_smi)
 interval=10
 # min_width=GPU 100% 100% 100% 100%
 #GPU_BRAND=NVIDIA // or AMD
