Update motd and i3bar

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -76,7 +76,7 @@ command=echo $(~/.config/i3/scripts/vpn)
 interval=10
 
 [ping]
-command=echo  $(ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1)
+command=echo  $(ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1) ms
 interval=10
 
 # Disk usage
@@ -96,9 +96,9 @@ interval=30
 command=echo  $(~/.config/i3/scripts/memory | head -n1)
 interval=3
 
-[gpu-load]
-command=echo  $(~/.config/i3/scripts/gpu_load_nvidia_smi)
-interval=10
+# [gpu-load]
+# command=echo  $(~/.config/i3/scripts/gpu_load_nvidia_smi)
+# interval=10
 # min_width=GPU 100% 100% 100% 100%
 #GPU_BRAND=NVIDIA // or AMD
 #T_WARN=70
