--- a/.config/i3/config
+++ b/.config/i3/config
@@ -438,14 +438,14 @@ exec --no-startup-id /usr/bin/wal -i ~/Pictures/Wallpapers/current -s
 # exec --no-startup-id sleep 1 && feh --bg-fill /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
 
 # set powersavings for display:
-exec --no-startup-id xset s 480 dpms 300 600 900
+exec --no-startup-id xset s 480 dpms 900 1200 1500
 
 # disable power saving (for example if using xscreensaver)
 #exec --no-startup-id xset -dpms
 
 # use xautolock to use autosuspend rules for mobile devices
 # https://wiki.archlinux.org/title/Session_lock#xautolock
-exec --no-startup-id xautolock -time 60 -locker "systemctl suspend"
+# exec --no-startup-id xautolock -time 60 -locker "systemctl suspend"
 
 
 # xscreensaver
